--- a/CourseManager/CourseManager/Web.config
+++ b/CourseManager/CourseManager/Web.config
@@ -9,8 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="courseManagerEntities" 
-         connectionString="data source=C-3;initial catalog=courseManager;persist security info=True;user id=sa;password=123456;" 
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-CourseManager-20191106160832;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-CourseManager-20191106160832.mdf" providerName="System.Data.SqlClient" />
+    <add name="CourseManagerEntities" 
+         connectionString="data source=c-43;initial catalog=CourseManager;user id=sa;password=123456;" 
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
