--- a/CourseManager/CourseManager/CourseManager.csproj
+++ b/CourseManager/CourseManager/CourseManager.csproj
@@ -7,7 +7,7 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{F7411814-6292-46C4-8858-6FFEE3EDB5C9}</ProjectGuid>
+    <ProjectGuid>{D2C5FB5B-F3B1-4858-99C4-2B66DDE3936D}</ProjectGuid>
     <ProjectTypeGuids>{E3E379DF-F4C6-4180-9B81-6769533ABE47};{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -163,52 +163,84 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="BLLs\Classes\ClassRepository.cs" />
+    <Compile Include="BLLs\Classes\CourseDetail.cs" />
+    <Compile Include="BLLs\Classes\IClassRepository.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ActionLinkController.cs" />
     <Compile Include="Controllers\ClassController.cs" />
     <Compile Include="Controllers\CourseController.cs" />
-    <Compile Include="Controllers\courseManagerController.cs" />
+    <Compile Include="Controllers\CourseManagementController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\studentController.cs" />
+    <Compile Include="Controllers\SideBarController.cs" />
+    <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Controllers\TeacherController.cs" />
+    <Compile Include="Filters\ActionResultExceptionFilterAttribute.cs" />
+    <Compile Include="Filters\RequireAuthenticationAttribute.cs" />
+    <Compile Include="Filters\UnauthorizedException.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201912040048440_create.cs" />
-    <Compile Include="Migrations\201912040048440_create.Designer.cs">
-      <DependentUpon>201912040048440_create.cs</DependentUpon>
+    <Compile Include="Migrations\201912130718027_Create201912131516.cs" />
+    <Compile Include="Migrations\201912130718027_Create201912131516.Designer.cs">
+      <DependentUpon>201912130718027_Create201912131516.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Migrations\Seeds\ActionLinkCreator.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Migrations\Seeds\SideBarCreator.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Migrations\Seeds\UserCreator.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Models\ActionLinks.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Models\Classes.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Models\ClassesExtention.cs" />
-    <Compile Include="Models\Course.cs">
+    <Compile Include="Models\ClassesExtention.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Models\CourseManagementExtention.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Models\CourseManagements.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Models\CourseManager.Context.cs">
+    <Compile Include="Models\CourseManagerEntities.Context.cs">
       <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
     </Compile>
-    <Compile Include="Models\CourseManager.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="Models\CourseManager.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
+    <Compile Include="Models\Courses.cs">
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="Models\Students.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Models\Teacher.cs">
+    <Compile Include="Models\StudentsExtention.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Models\Teachers.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Models\Users.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Models\ValidatableObjects\EncryptExtensions.cs" />
+    <Compile Include="Models\ValidatableObjects\LoginInput.cs" />
+    <Compile Include="Models\WebsiteInfo.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Models\SideBars.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-theme.css" />
+    <Content Include="Content\bootstrap-theme.min.css" />
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -265,7 +297,32 @@
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Content\bootstrap.css.map" />
+    <Content Include="Content\bootstrap.min.css.map" />
+    <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="Content\bootstrap-theme.min.css.map" />
+    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
+    <Content Include="Images\accent.png" />
+    <Content Include="Images\bullet.png" />
+    <Content Include="Images\heroAccent.png" />
+    <Content Include="Images\orderedList0.png" />
+    <Content Include="Images\orderedList1.png" />
+    <Content Include="Images\orderedList2.png" />
+    <Content Include="Images\orderedList3.png" />
+    <Content Include="Images\orderedList4.png" />
+    <Content Include="Images\orderedList5.png" />
+    <Content Include="Images\orderedList6.png" />
+    <Content Include="Images\orderedList7.png" />
+    <Content Include="Images\orderedList8.png" />
+    <Content Include="Images\orderedList9.png" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Scripts\jquery-1.7.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -280,6 +337,10 @@
     <Content Include="Scripts\knockout-2.1.0.debug.js" />
     <Content Include="Scripts\knockout-2.1.0.js" />
     <Content Include="Scripts\modernizr-2.5.3.js" />
+    <Content Include="Scripts\npm.js" />
+    <Content Include="Views\Shared\_LoginPartial.cshtml">
+      <SubType>Code</SubType>
+    </Content>
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -291,34 +352,12 @@
     </Content>
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Images\accent.png" />
-    <Content Include="Images\bullet.png" />
-    <Content Include="Images\heroAccent.png" />
-    <Content Include="Images\orderedList0.png" />
-    <Content Include="Images\orderedList1.png" />
-    <Content Include="Images\orderedList2.png" />
-    <Content Include="Images\orderedList3.png" />
-    <Content Include="Images\orderedList4.png" />
-    <Content Include="Images\orderedList5.png" />
-    <Content Include="Images\orderedList6.png" />
-    <Content Include="Images\orderedList7.png" />
-    <Content Include="Images\orderedList8.png" />
-    <Content Include="Images\orderedList9.png" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Account\_ChangePasswordPartial.cshtml" />
-    <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
-    <Content Include="Views\Account\_RemoveExternalLoginsPartial.cshtml" />
-    <Content Include="Views\Account\_SetPasswordPartial.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
-    <Content Include="Views\Account\Manage.cshtml" />
-    <Content Include="Views\Account\Register.cshtml" />
-    <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
-    <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
-    <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Class\Index.cshtml" />
@@ -331,25 +370,38 @@
     <Content Include="Views\Teacher\Create.cshtml" />
     <Content Include="Views\Teacher\Edit.cshtml" />
     <Content Include="Views\Teacher\Delete.cshtml" />
-    <Content Include="Views\student\Index.cshtml" />
-    <Content Include="Views\student\Details.cshtml" />
-    <Content Include="Views\student\Create.cshtml" />
-    <Content Include="Views\student\Edit.cshtml" />
-    <Content Include="Views\student\Delete.cshtml" />
-    <Content Include="Views\courseManager\Index.cshtml" />
-    <Content Include="Views\courseManager\Details.cshtml" />
-    <Content Include="Views\courseManager\Create.cshtml" />
-    <Content Include="Views\courseManager\Edit.cshtml" />
-    <Content Include="Views\courseManager\Delete.cshtml" />
+    <Content Include="Views\Student\Index.cshtml" />
+    <Content Include="Views\Student\Details.cshtml" />
+    <Content Include="Views\Student\Create.cshtml" />
+    <Content Include="Views\Student\Edit.cshtml" />
+    <Content Include="Views\Student\Delete.cshtml" />
     <Content Include="Views\Course\Index.cshtml" />
     <Content Include="Views\Course\Details.cshtml" />
     <Content Include="Views\Course\Create.cshtml" />
     <Content Include="Views\Course\Edit.cshtml" />
     <Content Include="Views\Course\Delete.cshtml" />
+    <Content Include="Views\CourseManagement\Index.cshtml" />
+    <Content Include="Views\CourseManagement\Details.cshtml" />
+    <Content Include="Views\CourseManagement\Create.cshtml" />
+    <Content Include="Views\CourseManagement\Edit.cshtml" />
+    <Content Include="Views\CourseManagement\Delete.cshtml" />
+    <Content Include="Views\Shared\Navbar.cshtml" />
+    <Content Include="Views\ActionLink\Index.cshtml" />
+    <Content Include="Views\ActionLink\Details.cshtml" />
+    <Content Include="Views\ActionLink\Create.cshtml" />
+    <Content Include="Views\ActionLink\Edit.cshtml" />
+    <Content Include="Views\ActionLink\Delete.cshtml" />
+    <Content Include="Views\SideBar\Index.cshtml" />
+    <Content Include="Views\SideBar\Details.cshtml" />
+    <Content Include="Views\SideBar\Create.cshtml" />
+    <Content Include="Views\SideBar\Edit.cshtml" />
+    <Content Include="Views\SideBar\Delete.cshtml" />
+    <Content Include="Views\Shared\SideBar.cshtml" />
+    <Content Include="Views\Class\ShowCourseManagement.cshtml" />
+    <Content Include="Views\Account\Register.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Filters\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -358,8 +410,8 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201912040048440_create.resx">
-      <DependentUpon>201912040048440_create.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201912130718027_Create201912131516.resx">
+      <DependentUpon>201912130718027_Create201912131516.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
@@ -380,7 +432,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>0</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:9098/</IISUrl>
+          <IISUrl>http://localhost:46730/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
